--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -17,14 +17,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Kalkulator Sederhana"
+            android:background="#0C0656"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             android:textAlignment="center"
-            android:textColor="#E91E63"
+            android:textColor="#FFFFFF"
             android:textSize="34sp" />
 
         <EditText
             android:id="@+id/etAngka1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
             android:ems="10"
             android:hint="input angka 1"
             android:inputType="number" />
@@ -33,6 +38,7 @@
             android:id="@+id/etAngka2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:ems="10"
             android:hint="input angka 2"
             android:inputType="number" />
@@ -46,6 +52,7 @@
                 android:id="@+id/btnTambah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="4sp"
                 android:text="Tambah" />
 
             <Button
@@ -69,7 +76,7 @@
             android:layout_height="wrap_content"
             android:text="Hasil"
             android:textAlignment="center"
-            android:textColor="#FFC107"
+            android:textColor="#011142"
             android:textSize="18sp"
             android:textStyle="bold|italic"
             tools:layout_editor_absoluteY="731dp" />
