--- a/app/src/main/res/layout/activity_detailhewan.xml
+++ b/app/src/main/res/layout/activity_detailhewan.xml
@@ -6,16 +6,24 @@
     android:gravity="center"
     android:padding="16dp">
 
+    <ImageView
+        android:id="@+id/detailhewan"
+        android:layout_width="210dp"
+        android:layout_height="120dp"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:src="@drawable/gajahh"
+        android:contentDescription="Gambar Hewan" />
+
     <TextView
         android:id="@+id/tvNamaHewan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="Nama Hewan"
         android:layout_gravity="center"
         android:textSize="24sp"
         android:textStyle="bold" />
-
 
     <TextView
         android:id="@+id/tvCiriHewan"
@@ -26,6 +34,7 @@
         android:textAlignment="center"
         android:textSize="18sp"
         android:layout_marginTop="8dp" />
+
     <TextView
         android:id="@+id/txtTinggi"
         android:layout_width="wrap_content"
@@ -35,6 +44,7 @@
         android:textAlignment="center"
         android:textSize="18sp"
         android:layout_marginTop="8dp" />
+
     <TextView
         android:id="@+id/txtBerat"
         android:layout_width="wrap_content"
